# Non-Euclidean-Distances-in-Molecular-Representation

./: .gitignore  README.md  main.py  pyproject.toml  wandb.py
Analysis/: omol25_analysis.ipynb
config/: api_key.json  plotting_config.py
figures/qm9/analysis/: visualize.py
notebooks/Materials Project/: clustering.ipynb  materials_project_analysis.ipynb  non_euclidean_clustering.ipynb
notebooks/Materials Project/analysis/: materials_project_analysis.ipynb
notebooks/Materials Project/clustering/euclidean/: invariant_features.ipynb
notebooks/Materials Project/clustering/non_euclidean/: non_euclidean_clustering.ipynb
notebooks/Materials Project/evaluation/: README.md  cluster_evaluation.ipynb  comparative_eval.ipynb
notebooks/Materials Project/evaluation/dbscan/: dbscan_eval.ipynb
notebooks/Materials Project/evaluation/hierachial_clustering/: evaluate_hier.ipynb
notebooks/Materials Project/evaluation/kmeans/: kmeans_eval.ipynb
notebooks/Materials Project/evaluation/soap_reduced/: reduced_soap_eval.ipynb
notebooks/Materials Project/evaluation/spectral/: spectral_eval.ipynb
notebooks/Materials Project/outlier/: outlier_detection.ipynb
notebooks/QM9/: cluster_analysis.ipynb  clusters.ipynb  descriptors.ipynb  euclidan_baselines.ipynb  grassman_pertubation_analysis.ipynb  non_euclidean_baseline.ipynb  qm9_analysis.ipynb
notebooks/QM9/analysis/: graph_analysis.ipynb  qm9_analysis.ipynb  report_mess.ipynb
notebooks/QM9/clustering/: cluster_metrics.ipynb  cluster_results_qm9.ipynb  descriptors.ipynb  euclidan_baselines.ipynb  invariant_features.ipynb  isomers.ipynb  non_euclidean_baseline.ipynb
notebooks/QM9/evaluation/: cluster_metrics.ipynb
notebooks/QM9/grassmann/: grassman_pertubation_analysis.ipynb  non_euclidean_grassmann.ipynb
notebooks/QM9/outlier/: outlier_detection.ipynb  readme.md
notebooks/QM9/stress test/: grassman_pertubation_analysis.ipynb  non_euclidean_grassmann.ipynb
notebooks/omat/: omat24_analysis.ipynb
notebooks/omol/: omol25_analysis.ipynb  omol25_clustering.ipynb
report/euclidean_baseline/: cluster_results_qm9.ipynb
report/materials_project/: cluster_results_materials_project.ipynb
report/qm9/euclidean_baseline/: cluster_results_qm9.ipynb
scripts/: distance_metrics.py  features.py  neighborhoods.py  run_cluster_reports.py  run_descriptors.py  run_distance_metrics.py  run_embeddings.py  run_fingerprints.py  run_stress_test.py
scripts/materials_project/: cluster_report_materials.py  euclidean_evaluation_pipeline.py  evaluation_pipeline.py
scripts/materials_project/outliers/: material_outliers.py
scripts/materials_project/validation/: validate_sampling.py
scripts/qm9/: chemprop.py  cluster_report_qm9.py  euclidean_evaluation_pipeline.py  evaluation_pipeline.py  graph.py  isomers_euclidean_eval.py  non_euclidean_eval_pipeline.py
scripts/qm9/outliers/: smiles_outliers.py
scripts/qm9/validation/: validate_sampling.py
src/: clusters.py  datasets.py  descriptors.py  distance.py  features.py  geometry.py  graph.py  helper_functions.py  non_euclidean.py  optimal_transport.py  outlier_detection.py
src/outliers/: eval_outlier_results.py  outlier_detection.py
testing/: test_dataloader.py
tests/: features.py  non_euclidean.py  test_grassmann.py  val_dataset.py
utils/: descriptors.py  file_ops.py  load_datasets.py
(+81 files in other folders)
