[project]
name = "anomaly-detection-in-molecular-and-materials-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.27.0",
    "ase-db-backends>=0.11.0",
    "dscribe>=2.1.2",
    "fairchem-core>=2.7.1",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "lmdb>=1.7.5",
    "loguru>=0.7.3",
    "mp-api>=0.46.0",
    "numba>=0.63.1",
    "polars>=1.38.0",
    "pyarrow>=23.0.0",
    "pymatgen>=2025.10.7",
    "pytest>=9.0.2",
    "rdkit>=2025.9.4",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.2",
]
