[project]
name = "anomaly-detection-in-molecular-and-materials-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "ase>=3.27.0",
    "ase-db-backends>=0.11.0",
    "chemiscope>=1.0.0",
    "chemprop>=2.2.2",
    "crystal-toolkit>=2025.10.8",
    "dscribe>=2.1.2",
    "fairchem-core>=2.7.1",
    "geomstats>=2.8.0",
    "gudhi>=3.11.0",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "kmedoids>=0.5.4",
    "lmdb>=1.7.5",
    "loguru>=0.7.3",
    "mapsim",
    "mp-api>=0.46.0",
    "nbformat>=5.10.4",
    "nglview>=4.0.1",
    "numba>=0.63.1",
    "persim>=0.3.8",
    "polars>=1.38.0",
    "pot>=0.9.6.post1",
    "pyarrow>=23.0.0",
    "pymatgen>=2025.10.7",
    "pyriemann>=0.10",
    "pytest>=9.0.2",
    "rdkit>=2025.9.4",
    "ripser>=0.6.14",
    "seaborn>=0.13.2",
    "selfies>=2.2.0",
    "torch>=2.6.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.2",
    "transformers>=5.1.0",
    "umap-learn>=0.5.11",
]

[tool.uv.sources]
mapsim = { git = "https://github.com/mapequation/map-equation-similarity" }
