[project]
name = "anomaly-detection-in-molecular-and-materials-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "ase>=3.27.0",
    "ase-db-backends>=0.11.0",
    "chemeleon>=0.1.3",
    "chemiscope>=1.0.0",
    "chemprop>=2.2.2",
    "crystal-toolkit>=2025.10.8",
    "dbcv",
    "dscribe>=2.1.2",
    "geomstats>=2.8.0",
    "gudhi>=3.11.0",
    "h5py>=3.15.1",
    "hdbscan>=0.8.42",
    "ipykernel>=7.1.0",
    "kmedoids>=0.5.4",
    "lightgbm>=4.6.0",
    "lmdb>=1.7.5",
    "loguru>=0.7.3",
    "mace-torch>=0.3.15",
    "mapsim",
    "mendeleev>=1.1.0",
    "mp-api>=0.46.0",
    "nbformat>=5.10.4",
    "nglview>=4.0.1",
    "numba>=0.63.1",
    "persim>=0.3.8",
    "polars>=1.38.0",
    "pot>=0.9.6.post1",
    "py3dmol>=2.5.4",
    "pyarrow>=23.0.0",
    "pymatgen>=2025.10.7",
    "pyriemann>=0.10",
    "pytest>=9.0.2",
    "python-louvain>=0.16",
    "pyvis>=0.3.2",
    "rdkit==2025.9.4",
    "ripser>=0.6.14",
    "scikit-bio>=0.7.2",
    "scikit-posthocs>=0.14.0",
    "seaborn>=0.13.2",
    "selfies>=2.2.0",
    "torch>=2.6.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.2",
    "transformers>=5.1.0",
    "umap-learn>=0.5.11",
    "uqpy>=4.1.6",
]

[tool.uv.sources]
mapsim = { git = "https://github.com/mapequation/map-equation-similarity" }
dbcv = { git = "https://github.com/FelSiq/DBCV.git" }
